    - libkipi7 -> libkipi8
  * Bump kde-sc-dev-latest build dependency to 4:4.6.1.
  * Bump S-V to 3.9.1; update Replaces/Breaks/Conflicts.
  * Update lintian overrides.
  * Add myself to Uploaders.

  [ Pino Toscano ]
  * Add libxfixes-dev build dependency.
  * Tighten the libexiv2-dev build-dendency to the version required upstream.
  * Replace kttsd suggest with jovie.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 03 Sep 2010 15:13:33 +0300

kdegraphics (4:4.4.5-2) unstable; urgency=medium

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.
  * Adapt changelog to match the actual upload history.
  * Fix mistake in Solid action predicate for kamera (Closes: #585717). Thanks
    to dju` <dju@elegiac.net> for the patch.

  [ Pino Toscano ]
  * Import upstream revision r1167826 to fix CVE-2010-2575 in the plucker
    backend of Okular.

  [ Sune Vuorela ]
  * Some description updates.
  * Urgency medium for the security issue.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 27 Aug 2010 15:35:55 +0200

kdegraphics (4:4.4.5-1) unstable; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Some changes in the package descriptions, including:
    - expanded description of okular, so all the formats supported by plugins
      in that package are listed
    - typo fixed in description of libkdcraw8 (Closes: #585429)

  [ Modestas Vainius ]
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update kexiv symbol files

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 00:56:14 +0200

kdegraphics (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Update libkexiv2-8.symbols for kfreebsd-i386.
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.